# intercept

./: .clang-format  .gitignore  CMakeLists.txt  any_newer_than.sh  build.sh  run.sh  vcpkg.json
src/: assert.hpp  defs.hpp  entities.hpp  entity.hpp  main.cpp  missile_generator.hpp  new_slotmap.hpp  slotmap.hpp  state.cpp  state.hpp
